test/deprecated/rangeNewSliceRule.compopts
                      # rangeNewSliceRule.dflt.good
-snewSliceRule=true   # rangeNewSliceRule.true.good
-snewSliceRule=false  # rangeNewSliceRule.false.good
